feat: added project custom colors

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title></title>
   </head>
   <body>
-      <header></header>
-      <main>
-        <div class="main-container">
-            <h1>САЙТ</h1>
-        </div>
-      </main>
-      <footer></footer>
-    </div>
+    <header></header>
+    <main>
+      <div class="main-container">
+        <h1>Сайт</h1>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
