feat: added header and preview

--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
     <title></title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="header-container">
+        <div class="header-menu text-16">
+          <p>Главная</p>
+          <p>О нас</p>
+          <p>Награды</p>
+          <p>Тарифы</p>
+          <p>Акции</p>
+          <p>Запись</p>
+          <p>Контакты</p>
+        </div>
+        <div class="svg"></div>
+        <div class="svg"></div>
+        <div class="svg"></div>
+        <h4>+7(910) 684-90-53</h4>
+        <button></button>
+      </div>
+    </header>
     <main>
       <div class="main-container">
-        <h1>Сайт</h1>
+        <div class="preview">
+          <h2 class="panton-h4">ул. Черкизова 14, Москва</h2>
+          <h1>ПОКОРЯЙТЕ ВОЛНЫ ВМЕСТЕ С НАМИ</h1>
+          <p class="text-20">
+            SurfTrainCo предлагает вам доступное, <br />
+            комплексное и приятное обучение серфингу <br />
+            для всех уровней навыков и возрастов
+          </p>
+        </div>
       </div>
     </main>
     <footer></footer>
