--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="svg"></div>
         <div class="svg"></div>
         <h4>+7(910) 684-90-53</h4>
-        <button></button>
+        <a href="#" class="details text-16">Подробнее</a>
       </div>
     </header>
     <main>
