fix: fixed header

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
     <header>
       <div class="header-container">
         <div class="header-menu text-16">
-          <p>Главная</p>
-          <p>О нас</p>
-          <p>Награды</p>
-          <p>Тарифы</p>
-          <p>Акции</p>
-          <p>Запись</p>
-          <p>Контакты</p>
+          <a href="#">Главная</a>
+          <a href="#">О нас</a>
+          <a href="#">Награды</a>
+          <a href="#">Тарифы</a>
+          <a href="#">Акции</a>
+          <a href="#">Запись</a>
+          <a href="#">Контакты</a>
         </div>
-        <div class="svg"></div>
-        <div class="svg"></div>
-        <div class="svg"></div>
-        <h4>+7(910) 684-90-53</h4>
+        <div class="svgPhone">
+          <h4 class="number">+7(910) 684-90-53</h4>
+        </div>
         <a href="#" class="details text-16">Подробнее</a>
       </div>
     </header>
@@ -35,6 +34,38 @@
             комплексное и приятное обучение серфингу <br />
             для всех уровней навыков и возрастов
           </p>
+        </div>
+        <div class="description-photo">
+          <div>
+            <div class="dp1">
+              <h4>Профессиональное руководство</h4>
+              <p>
+                опытные инструкторы помогут вам освоить основы и быстро
+                совершенствоваться.
+              </p>
+            </div>
+            <div class="dp2">
+              <h4 class="">Качественное оборудование</h4>
+              <p>
+                доски и гидрокостюмы помогут вам оставаться в безопасности и
+                получать удовольствие.
+              </p>
+            </div>
+            <div class="dp3">
+              <h4>Благоприятная обстановка</h4>
+              <p>
+                благоприятная и безопасная обстановка в обучении с людьми со
+                схожим опытом и целями.
+              </p>
+            </div>
+            <div class="dp4">
+              <h4>Дополнительные услуги</h4>
+              <p>
+                услуги фотографий и видео помогут вам запечатлить и поделиться
+                опытом серфинга.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
