feat: added description photo

--- a/index.html
+++ b/index.html
@@ -36,35 +36,37 @@
           </p>
         </div>
         <div class="description-photo">
-          <div>
-            <div class="dp1">
-              <h4>Профессиональное руководство</h4>
-              <p>
-                опытные инструкторы помогут вам освоить основы и быстро
-                совершенствоваться.
-              </p>
-            </div>
-            <div class="dp2">
-              <h4 class="">Качественное оборудование</h4>
-              <p>
-                доски и гидрокостюмы помогут вам оставаться в безопасности и
-                получать удовольствие.
-              </p>
-            </div>
-            <div class="dp3">
-              <h4>Благоприятная обстановка</h4>
-              <p>
-                благоприятная и безопасная обстановка в обучении с людьми со
-                схожим опытом и целями.
-              </p>
-            </div>
-            <div class="dp4">
-              <h4>Дополнительные услуги</h4>
-              <p>
-                услуги фотографий и видео помогут вам запечатлить и поделиться
-                опытом серфинга.
-              </p>
-            </div>
+          <div class="dp1">
+            <img src="" alt="photo" />
+            <h4>Профессиональное руководство</h4>
+            <p>
+              опытные инструкторы помогут вам освоить основы и быстро
+              совершенствоваться.
+            </p>
+          </div>
+          <div class="dp2">
+            <img src="" alt="photo" />
+            <h4 class="">Качественное оборудование</h4>
+            <p>
+              доски и гидрокостюмы помогут вам оставаться в безопасности и
+              получать удовольствие.
+            </p>
+          </div>
+          <div class="dp3">
+            <img src="" alt="photo" />
+            <h4>Благоприятная обстановка</h4>
+            <p>
+              благоприятная и безопасная обстановка в обучении с людьми со
+              схожим опытом и целями.
+            </p>
+          </div>
+          <div class="dp4">
+            <img src="" alt="photo" />
+            <h4>Дополнительные услуги</h4>
+            <p>
+              услуги фотографий и видео помогут вам запечатлить и поделиться
+              опытом серфинга.
+            </p>
           </div>
         </div>
       </div>
