--- a/index.html
+++ b/index.html
@@ -69,6 +69,78 @@
             </p>
           </div>
         </div>
+        <div class="surfing">
+          <h2>СЕРФИНГ</h2>
+          <h2 class="panton-h2">это стиль жизни</h2>
+        </div>
+        <div class="company">
+          <div class="company-screen">
+            <img src="/public/Картинка серфера.png" alt="SurfTrainCo Screen" />
+          </div>
+          <div class="company-both">
+            <div class="company-about">
+              <h3>SurfTrainCo —</h3>
+              <p class="text-20">
+                это компания по обучению серфингу, расположенная в Москве,
+                которая открылась в 2018 году. Ее миссия состоит в том, чтобы
+                обеспечить доступное, всестороннее и приятное обучение серфингу
+                для всех уровней навыков и возрастов.
+              </p>
+            </div>
+            <div class="company-count">
+              <img
+                src="public/Web2024 v1/Аватар 1.svg"
+                alt="Аватар 1"
+                class="svg-avatar"
+              />
+              <img
+                src="public/Web2024 v1/Аватар 2.svg"
+                alt="Аватар 2"
+                class="svg-avatar"
+              />
+              <img
+                src="public/Web2024 v1/Аватар 3.svg"
+                alt="Аватар 3"
+                class="svg-avatar"
+              />
+              <div class="students">
+                <h3>2000+</h3>
+                <p class="text-20">учеников</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <p>
+            Не бойтесь испытать себя и свои возможности - поддайтесь волнам и
+            пусть они помогут вам раскрыть свой истинный потенциал. Погрузитесь
+            в мир серфинга и почувствуйте, как ваша жизнь наполняется яркими
+            эмоциями и волнующими приключениями. Погнали волну!
+          </p>
+        </div>
+        <div class="rewards">
+          <div class="rewards-text">
+            <h2>НАГРАДЫ</h2>
+            <h2 class="panton-h2">нашего клуба</h2>
+          </div>
+          <div class="rewards-photo-1-background">
+            <div class="rewards-photo-1">
+              <img src="public/Картинка.png" alt="reward png" />
+              <div class="rewards-photo-1-text">
+                <p class="text-16">Награда</p>
+                <h3>
+                  «Лучший инструктор <br />
+                  по серфингу 2022»
+                </h3>
+                <p class="text-20">
+                  от международной организации <br />
+                  Surfers Against Sewage (SAS)
+                </p>
+                <p class="text-20">(2022)</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
