fix: fixed company box

--- a/index.html
+++ b/index.html
@@ -141,6 +141,53 @@
             </div>
           </div>
         </div>
+        <div
+          class="common"
+          style="
+            background: black;
+            display: flex;
+            justify-content: space-around;
+            padding: 15px 20px;
+          "
+        >
+          <div
+            class="1"
+            style="
+              background: red;
+              width: 200px;
+              height: 200px;
+              border-radius: 35px;
+              border: 5px solid white;
+            "
+          ></div>
+          <div
+            class="2"
+            style="
+              background: green;
+              width: 200px;
+              height: 200px;
+              border-radius: 35px;
+            "
+          ></div>
+          <div
+            class="3"
+            style="
+              background: blue;
+              width: 200px;
+              height: 200px;
+              border-radius: 35px;
+            "
+          ></div>
+          <div
+            class="4"
+            style="
+              background: purple;
+              width: 200px;
+              height: 200px;
+              border-radius: 35px;
+            "
+          ></div>
+        </div>
       </div>
     </main>
     <footer></footer>
