fix: description boxes

--- a/index.html
+++ b/index.html
@@ -37,34 +37,38 @@
         </div>
         <div class="description-photo">
           <div class="dp1">
-            <img src="" alt="photo" />
+            <img src="public/Vector 31.svg" alt="photo" />
             <h4>Профессиональное руководство</h4>
             <p>
-              опытные инструкторы помогут вам освоить основы и быстро
+              опытные инструкторы помогут <br />
+              вам освоить основы и быстро <br />
               совершенствоваться.
             </p>
           </div>
           <div class="dp2">
-            <img src="" alt="photo" />
+            <img src="public/Vector 31.svg" alt="photo" />
             <h4 class="">Качественное оборудование</h4>
             <p>
-              доски и гидрокостюмы помогут вам оставаться в безопасности и
-              получать удовольствие.
+              доски и гидрокостюмы помогут <br />
+              вам оставаться в безопасности <br />
+              и получать удовольствие.
             </p>
           </div>
           <div class="dp3">
-            <img src="" alt="photo" />
+            <img src="public/Vector 31.svg" alt="photo" />
             <h4>Благоприятная обстановка</h4>
             <p>
-              благоприятная и безопасная обстановка в обучении с людьми со
-              схожим опытом и целями.
+              благоприятная и безопасная <br />
+              обстановка в обучении с людьми <br />
+              со схожим опытом и целями.
             </p>
           </div>
           <div class="dp4">
-            <img src="" alt="photo" />
+            <img src="public/Vector 31.svg" alt="photo" />
             <h4>Дополнительные услуги</h4>
             <p>
-              услуги фотографий и видео помогут вам запечатлить и поделиться
+              услуги фотографий и видео помогут <br />
+              вам запечатлить и поделиться <br />
               опытом серфинга.
             </p>
           </div>
