feat: added bg image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <div class="header-container">
+        <img src="public/Лого (1).svg" alt="logo" />
         <div class="header-menu text-16">
           <a href="#">Главная</a>
           <a href="#">О нас</a>
@@ -19,11 +20,23 @@
           <a href="#">Контакты</a>
         </div>
         <div class="svgPhone">
+          <img src="public/State=Default.svg" alt="Telegram" class="telegram" />
+          <img
+            src="public/Property 1=Default.svg"
+            alt="WhatsApp"
+            class="whatsapp"
+          />
+          <img
+            src="public/Property 1=Default-1.svg"
+            alt="Viber"
+            class="viber"
+          />
           <h4 class="number">+7(910) 684-90-53</h4>
         </div>
         <a href="#" class="details text-16">Подробнее</a>
       </div>
     </header>
+    <div class="bg-image"></div>
     <main>
       <div class="main-container">
         <div class="preview">
@@ -85,25 +98,29 @@
             <div class="company-about">
               <h3>SurfTrainCo —</h3>
               <p class="text-20">
-                это компания по обучению серфингу, расположенная в Москве,
-                которая открылась в 2018 году. Ее миссия состоит в том, чтобы
-                обеспечить доступное, всестороннее и приятное обучение серфингу
+                это компания по обучению серфингу, <br />
+                расположенная в Москве, которая <br />
+                открылась в 2018 году. <br />
+                <br />
+                Ее миссия состоит в том, чтобы <br />
+                обеспечить доступное, всестороннее <br />
+                и приятное обучение серфингу <br />
                 для всех уровней навыков и возрастов.
               </p>
             </div>
             <div class="company-count">
               <img
-                src="public/Web2024 v1/Аватар 1.svg"
+                src="public/Аватар 1.svg"
                 alt="Аватар 1"
                 class="svg-avatar"
               />
               <img
-                src="public/Web2024 v1/Аватар 2.svg"
+                src="public/Аватар 2.svg"
                 alt="Аватар 2"
                 class="svg-avatar"
               />
               <img
-                src="public/Web2024 v1/Аватар 3.svg"
+                src="public/Аватар 3.svg"
                 alt="Аватар 3"
                 class="svg-avatar"
               />
