fix: company box

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
       <div class="main-container">
         <div class="preview">
           <h2 class="panton-h4">ул. Черкизова 14, Москва</h2>
-          <h1>ПОКОРЯЙТЕ ВОЛНЫ ВМЕСТЕ С НАМИ</h1>
+          <h1>
+            ПОКОРЯЙТЕ ВОЛНЫ <br />
+            ВМЕСТЕ С НАМИ
+          </h1>
           <p class="text-20">
             SurfTrainCo предлагает вам доступное, <br />
             комплексное и приятное обучение серфингу <br />
@@ -87,8 +90,8 @@
           </div>
         </div>
         <div class="surfing">
-          <h2>СЕРФИНГ</h2>
-          <h2 class="panton-h2">это стиль жизни</h2>
+          <h2 style="text-align: left">СЕРФИНГ</h2>
+          <h2 class="panton-h2" style="text-align: right">это стиль жизни</h2>
         </div>
         <div class="company">
           <div class="company-screen">
