feat: company box added logo

--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@
         </div>
         <div class="company">
           <div class="company-screen">
-            <img src="/public/Картинка серфера.png" alt="SurfTrainCo Screen" />
+            <img
+              src="/public/Картинка серфера.png"
+              alt="SurfTrainCo Screen"
+              class="company-surf"
+            />
+            <img
+              src="public/Лого (2).svg"
+              alt="logo"
+              class="company-surf-overlay"
+            />
           </div>
           <div class="company-both">
             <div class="company-about">
