feat: added programs

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <p>
               услуги фотографий и видео помогут <br />
               вам запечатлить и поделиться <br />
-              опытом серфинга.
+              опытом серфинга. <br />
+              awdawd
             </p>
           </div>
         </div>
@@ -174,52 +175,133 @@
             </div>
           </div>
         </div>
-        <div
-          class="common"
-          style="
-            background: black;
-            display: flex;
-            justify-content: space-around;
-            padding: 15px 20px;
-          "
-        >
-          <div
-            class="1"
-            style="
-              background: red;
-              width: 200px;
-              height: 200px;
-              border-radius: 35px;
-              border: 5px solid white;
-            "
-          ></div>
-          <div
-            class="2"
-            style="
-              background: green;
-              width: 200px;
-              height: 200px;
-              border-radius: 35px;
-            "
-          ></div>
-          <div
-            class="3"
-            style="
-              background: blue;
-              width: 200px;
-              height: 200px;
-              border-radius: 35px;
-            "
-          ></div>
-          <div
-            class="4"
-            style="
-              background: purple;
-              width: 200px;
-              height: 200px;
-              border-radius: 35px;
-            "
-          ></div>
+        <div class="programs">
+          <div class="programs-text">
+            <h2>Программы</h2>
+            <h2 class="panton-h2">обучения</h2>
+          </div>
+          <div class="cards">
+            <div class="easy-start">
+              <div class="easy-start-border">
+                <img src="public/Иконка1.svg" alt="icon-1" class="svg-tarif" />
+                <div class="easy-start-text">
+                  <p class="text-20">-тариф-</p>
+                  <h3>Easy Start</h3>
+                </div>
+                <div class="easy-start-info">
+                  <div class="course">
+                    <img src="public/icon1.svg" alt="" />
+                    <div class="course-text">
+                      <p class="text-16">длительность курса</p>
+                      <p class="text-20">5 уроков</p>
+                    </div>
+                  </div>
+                  <div class="lesson">
+                    <img src="public/icon2.svg" alt="" />
+                    <div class="lesson-text">
+                      <p class="text-16">длительность урока</p>
+                      <p class="text-20">45 минут</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="easy-start-description">
+                  <div class="easy-start-description-mark-1">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Воссозданный искуственный речной порог
+                    </p>
+                  </div>
+                  <div class="easy-start-description-mark-2">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">Доска с плавниками, как на океане</p>
+                  </div>
+                  <div class="easy-start-description-mark-3">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Даёт возможность отработать технику поворотов, <br />
+                      трюки на волне, развить баланс и мышечную память
+                    </p>
+                  </div>
+                  <div class="easy-start-description-mark-4">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Помогает подготовиться к катанию на океанских <br />
+                      волнах (работа тела после поп-ап)
+                    </p>
+                  </div>
+                </div>
+                <div class="easy-start-price">
+                  <p class="price-1">29 000 руб.</p>
+                  <p class="price-2">12 990 руб.</p>
+                </div>
+                <button name="Choose" class="choose text-20">
+                  Выбрать тариф
+                </button>
+              </div>
+            </div>
+            <div class="flow-rider">
+              <div class="easy-start-border">
+                <img src="public/Иконка2.svg" alt="icon-1" class="svg-tarif" />
+                <div class="easy-start-text">
+                  <p class="text-20">-тариф-</p>
+                  <h3>Flow Rider</h3>
+                </div>
+                <div class="easy-start-info">
+                  <div class="course">
+                    <img src="public/icon1.svg" alt="" />
+                    <div class="course-text">
+                      <p class="text-16">длительность курса</p>
+                      <p class="text-20">5 уроков</p>
+                    </div>
+                  </div>
+                  <div class="lesson">
+                    <img src="public/icon2.svg" alt="" />
+                    <div class="lesson-text">
+                      <p class="text-16">длительность урока</p>
+                      <p class="text-20">45 минут</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="flow-rider-description">
+                  <div class="flow-rider-description-mark-1">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Напор воды, направленный вверх по натянутой <br />
+                      тканевой поверхности
+                    </p>
+                  </div>
+                  <div class="flow-rider-description-mark-2">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Доска без плавников, нечто среднее между <br />
+                      скейтбордом и сноубордом
+                    </p>
+                  </div>
+                  <div class="flow-rider-description-mark-3">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Даёт возможность развить баланс и получить яркие <br />
+                      эмоции от катания на волне
+                    </p>
+                  </div>
+                  <div class="flow-rider-description-mark-4">
+                    <img src="public/Иконка-галочка.svg" alt="" />
+                    <p class="text-20">
+                      Возможность поймать удовольствие от движения и <br />
+                      маневрирования на доске по водному потоку
+                    </p>
+                  </div>
+                </div>
+                <div class="easy-start-price">
+                  <p class="price-1">22 000 руб.</p>
+                  <p class="price-2">10 990 руб.</p>
+                </div>
+                <button name="Choose" class="choose text-20">
+                  Выбрать тариф
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
