feat: added discounts

--- a/index.html
+++ b/index.html
@@ -303,6 +303,41 @@
             </div>
           </div>
         </div>
+        <div class="discounts">
+          <div class="bg-image2">
+            <img src="public/Подложка вырез.png" alt="" />
+          </div>
+          <div class="discounts-text">
+            <h2>АКЦИИ</h2>
+            <h2 class="panton-h2">и скидки</h2>
+          </div>
+          <div class="discounts-photos">
+            <div class="discounts-photos-card1">
+              <img src="public/content1.png" alt="" class="discount-png" />
+              <p>До 25.04.2024</p>
+              <p>
+                Бесплатный урок серфинга <br />
+                для первого посещения
+              </p>
+            </div>
+            <div class="discounts-photos-card2">
+              <img src="public/content2.png" alt="" class="discount-png" />
+              <p>Бессрочно</p>
+              <p>
+                Сертификация или аттестация <br />
+                по окончании курса
+              </p>
+            </div>
+            <div class="discounts-photos-card3">
+              <img src="public/content3.png" alt="" class="discount-png" />
+              <p>До 12.05.2024</p>
+              <p>
+                Пакет серфинга <br />
+                для двоих
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
