fix: fixed discount box

--- a/index.html
+++ b/index.html
@@ -314,24 +314,34 @@
           <div class="discounts-photos">
             <div class="discounts-photos-card1">
               <img src="public/content1.png" alt="" class="discount-png" />
-              <p>До 25.04.2024</p>
-              <p>
+              <div class="discounts-photos-text-1">
+                <p class="text-16">До 25.04.2024</p>
+                <img src="public/Vector 19.svg" alt="" />
+              </div>
+              <p class="discounts-photos-text-2">
                 Бесплатный урок серфинга <br />
                 для первого посещения
               </p>
             </div>
             <div class="discounts-photos-card2">
               <img src="public/content2.png" alt="" class="discount-png" />
-              <p>Бессрочно</p>
-              <p>
+              <div class="discounts-photos-text-1">
+                <p class="text-16">Бессрочно</p>
+                <img src="public/Vector 19.svg" alt="" />
+              </div>
+              <p class="discounts-photos-text-2">
                 Сертификация или аттестация <br />
                 по окончании курса
               </p>
             </div>
             <div class="discounts-photos-card3">
               <img src="public/content3.png" alt="" class="discount-png" />
-              <p>До 12.05.2024</p>
-              <p>
+              <div class="discounts-photos-text-1">
+                <p class="text-16">До 12.05.2024</p>
+                <img src="public/Vector 19.svg" alt="" />
+              </div>
+
+              <p class="discounts-photos-text-2">
                 Пакет серфинга <br />
                 для двоих
               </p>
