fix: small fixes

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
           </p>
         </div>
         <div class="rewards">
+          <img src="public/Подложка вырез (1).png" alt="" class="bg-image2" />
           <div class="rewards-text">
             <h2>НАГРАДЫ</h2>
             <h2 class="panton-h2">нашего клуба</h2>
@@ -304,9 +305,7 @@
           </div>
         </div>
         <div class="discounts">
-          <div class="bg-image2">
-            <img src="public/Подложка вырез.png" alt="" />
-          </div>
+          <img src="public/Подложка вырез.png" alt="" class="bg-image2" />
           <div class="discounts-text">
             <h2>АКЦИИ</h2>
             <h2 class="panton-h2">и скидки</h2>
@@ -347,6 +346,15 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="comment-2">
+          <img src="public/Волна.svg" alt="" class="wave-svg" />
+          <p>
+            Помните, что каждый ваш выход на доску - это возможность <br />
+            выйти за пределы своих комфортных зон и стать лучше, сильнее <br />
+            и увереннее. Поверьте в себя, стремитесь к новым вершинам <br />
+            и не забывайте наслаждаться каждым мгновением на доске.
+          </p>
         </div>
       </div>
     </main>
