feat: train with grid

--- a/index.html
+++ b/index.html
@@ -356,6 +356,14 @@
             и не забывайте наслаждаться каждым мгновением на доске.
           </p>
         </div>
+        <div class="order">
+          <img src="public/Подложка вырез (2).png" alt="" class="bg-image2" />
+          <div class="order-text">
+            <h2>ЗАПИСЬ</h2>
+            <h2 class="panton-h2">на занятие</h2>
+          </div>
+          <div class="order-form"></div>
+        </div>
       </div>
     </main>
     <footer></footer>
