feat: added order

--- a/index.html
+++ b/index.html
@@ -362,7 +362,37 @@
             <h2>ЗАПИСЬ</h2>
             <h2 class="panton-h2">на занятие</h2>
           </div>
-          <div class="order-form"></div>
+          <div class="order-form-all">
+            <div class="order-form-forms">
+              <select name="" id="" class="order-form">
+                <option value="">Выберите дату</option>
+              </select>
+              <select name="" id="" class="order-form">
+                <option value="">Выберите время</option>
+              </select>
+              <select name="" id="" class="order-form-tarif order-form">
+                <option value="">Выберите подходящий тариф</option>
+              </select>
+              <input
+                type="text"
+                class="order-form-text"
+                placeholder="Иванов Иван"
+              />
+              <input
+                type="text"
+                class="order-form-text"
+                placeholder="8(999) 999-99-99"
+              />
+              <button class="order-form order-form-button">
+                Записаться онлайн
+              </button>
+              <p>
+                Нажимая на кнопку, вы соглашаетесь <br />
+                <a href="#">с политикой обработки данных</a>
+              </p>
+            </div>
+            <img src="public/image 3 1.png" alt="" class="order-photo" />
+          </div>
         </div>
       </div>
     </main>
