fix: fixed header by bem technology

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="header-container">
         <img src="public/Лого (1).svg" alt="logo" />
-        <div class="header-menu text-16">
+        <div class="header-container-menu text-16">
           <a href="#">Главная</a>
           <a href="#">О нас</a>
           <a href="#">Награды</a>
@@ -19,7 +19,7 @@
           <a href="#">Запись</a>
           <a href="#">Контакты</a>
         </div>
-        <div class="svgPhone">
+        <div class="header-container-contacts">
           <img src="public/State=Default.svg" alt="Telegram" class="telegram" />
           <img
             src="public/Property 1=Default.svg"
@@ -31,12 +31,12 @@
             alt="Viber"
             class="viber"
           />
-          <h4 class="number">+7(910) 684-90-53</h4>
+          <h4 class="header-container-contacts-number">+7(910) 684-90-53</h4>
         </div>
-        <a href="#" class="details text-16">Подробнее</a>
+        <a href="#" class="header-container-details text-16">Подробнее</a>
       </div>
     </header>
-    <div class="bg-image"></div>
+    <div class="header-container-image"></div>
     <main>
       <div class="main-container">
         <div class="preview">
@@ -52,7 +52,7 @@
           </p>
         </div>
         <div class="description-photo">
-          <div class="dp1">
+          <div class="photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4>Профессиональное руководство</h4>
             <p>
@@ -61,7 +61,7 @@
               совершенствоваться.
             </p>
           </div>
-          <div class="dp2">
+          <div class="photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4 class="">Качественное оборудование</h4>
             <p>
@@ -70,7 +70,7 @@
               и получать удовольствие.
             </p>
           </div>
-          <div class="dp3">
+          <div class="photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4>Благоприятная обстановка</h4>
             <p>
@@ -79,7 +79,7 @@
               со схожим опытом и целями.
             </p>
           </div>
-          <div class="dp4">
+          <div class="photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4>Дополнительные услуги</h4>
             <p>
